Compiler/antlr-parser/tml_parser.go
// Generated from Compiler/antlr-parser//TML.g4 by ANTLR 4.7.

package parser // TML

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'define'", "'macro'", "'hs'", "'ha'", "'hr'", "'_'", "'('", "')'",
	"'{'", "'}'", "','", "'<'", "'>'",
}
var symbolicNames = []string{
	"", "DEFINE", "MACRO", "STARTSTATE", "ACCEPTSTATE", "REJECTSTATE", "UNDERSCORE",
	"LPAREN", "RPAREN", "LBRACE", "RBRACE", "COMMA", "LT", "GT", "ID", "DECIMAL",
	"BlockComment", "LineComment", "WHITESPACE",
}

var ruleNames = []string{
	"start", "program", "statement", "macroApp", "macroDef", "command", "stateLabel",
	"tapeSymbol", "direction",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type TMLParser struct {
	*antlr.BaseParser
}

func NewTMLParser(input antlr.TokenStream) *TMLParser {
	this := new(TMLParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "TML.g4"

	return this
}

// TMLParser tokens.
const (
	TMLParserEOF          = antlr.TokenEOF
	TMLParserDEFINE       = 1
	TMLParserMACRO        = 2
	TMLParserSTARTSTATE   = 3
	TMLParserACCEPTSTATE  = 4
	TMLParserREJECTSTATE  = 5
	TMLParserUNDERSCORE   = 6
	TMLParserLPAREN       = 7
	TMLParserRPAREN       = 8
	TMLParserLBRACE       = 9
	TMLParserRBRACE       = 10
	TMLParserCOMMA        = 11
	TMLParserLT           = 12
	TMLParserGT           = 13
	TMLParserID           = 14
	TMLParserDECIMAL      = 15
	TMLParserBlockComment = 16
	TMLParserLineComment  = 17
	TMLParserWHITESPACE   = 18
)

// TMLParser rules.
const (
	TMLParserRULE_start      = 0
	TMLParserRULE_program    = 1
	TMLParserRULE_statement  = 2
	TMLParserRULE_macroApp   = 3
	TMLParserRULE_macroDef   = 4
	TMLParserRULE_command    = 5
	TMLParserRULE_stateLabel = 6
	TMLParserRULE_tapeSymbol = 7
	TMLParserRULE_direction  = 8
)

// IStartContext is an interface to support dynamic dispatch.
type IStartContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStartContext differentiates from other interfaces.
	IsStartContext()
}

type StartContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStartContext() *StartContext {
	var p = new(StartContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TMLParserRULE_start
	return p
}

func (*StartContext) IsStartContext() {}

func NewStartContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StartContext {
	var p = new(StartContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TMLParserRULE_start

	return p
}

func (s *StartContext) GetParser() antlr.Parser { return s.parser }

func (s *StartContext) Program() IProgramContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IProgramContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IProgramContext)
}

func (s *StartContext) EOF() antlr.TerminalNode {
	return s.GetToken(TMLParserEOF, 0)
}

func (s *StartContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StartContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StartContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TMLListener); ok {
		listenerT.EnterStart(s)
	}
}

func (s *StartContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TMLListener); ok {
		listenerT.ExitStart(s)
	}
}

func (p *TMLParser) Start() (localctx IStartContext) {
	localctx = NewStartContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, TMLParserRULE_start)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(18)
		p.Program()
	}
	{
		p.SetState(19)
		p.Match(TMLParserEOF)
	}

	return localctx
}

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TMLParserRULE_program
	return p
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TMLParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) AllStatement() []IStatementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IStatementContext)(nil)).Elem())
	var tst = make([]IStatementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IStatementContext)
		}
	}

	return tst
}

func (s *ProgramContext) Statement(i int) IStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TMLListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TMLListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (p *TMLParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, TMLParserRULE_program)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(22)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == TMLParserDEFINE || _la == TMLParserLPAREN {
		{
			p.SetState(21)
			p.Statement()
		}

		p.SetState(24)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TMLParserRULE_statement
	return p
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TMLParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) Command() ICommandContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICommandContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICommandContext)
}

func (s *StatementContext) MacroDef() IMacroDefContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMacroDefContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IMacroDefContext)
}

func (s *StatementContext) MacroApp() IMacroAppContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMacroAppContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IMacroAppContext)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TMLListener); ok {
		listenerT.EnterStatement(s)
	}
}

func (s *StatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TMLListener); ok {
		listenerT.ExitStatement(s)
	}
}

func (p *TMLParser) Statement() (localctx IStatementContext) {
	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, TMLParserRULE_statement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(29)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(26)
			p.Command()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(27)
			p.MacroDef()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(28)
			p.MacroApp()
		}

	}

	return localctx
}

// IMacroAppContext is an interface to support dynamic dispatch.
type IMacroAppContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetEnteringState returns the enteringState rule contexts.
	GetEnteringState() IStateLabelContext

	// GetAcceptState returns the acceptState rule contexts.
	GetAcceptState() IStateLabelContext

	// GetRejectState returns the rejectState rule contexts.
	GetRejectState() IStateLabelContext

	// SetEnteringState sets the enteringState rule contexts.
	SetEnteringState(IStateLabelContext)

	// SetAcceptState sets the acceptState rule contexts.
	SetAcceptState(IStateLabelContext)

	// SetRejectState sets the rejectState rule contexts.
	SetRejectState(IStateLabelContext)

	// IsMacroAppContext differentiates from other interfaces.
	IsMacroAppContext()
}

type MacroAppContext struct {
	*antlr.BaseParserRuleContext
	parser        antlr.Parser
	enteringState IStateLabelContext
	acceptState   IStateLabelContext
	rejectState   IStateLabelContext
}

func NewEmptyMacroAppContext() *MacroAppContext {
	var p = new(MacroAppContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TMLParserRULE_macroApp
	return p
}

func (*MacroAppContext) IsMacroAppContext() {}

func NewMacroAppContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MacroAppContext {
	var p = new(MacroAppContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TMLParserRULE_macroApp

	return p
}

func (s *MacroAppContext) GetParser() antlr.Parser { return s.parser }

func (s *MacroAppContext) GetEnteringState() IStateLabelContext { return s.enteringState }

func (s *MacroAppContext) GetAcceptState() IStateLabelContext { return s.acceptState }

func (s *MacroAppContext) GetRejectState() IStateLabelContext { return s.rejectState }

func (s *MacroAppContext) SetEnteringState(v IStateLabelContext) { s.enteringState = v }

func (s *MacroAppContext) SetAcceptState(v IStateLabelContext) { s.acceptState = v }

func (s *MacroAppContext) SetRejectState(v IStateLabelContext) { s.rejectState = v }

func (s *MacroAppContext) AllLPAREN() []antlr.TerminalNode {
	return s.GetTokens(TMLParserLPAREN)
}

func (s *MacroAppContext) LPAREN(i int) antlr.TerminalNode {
	return s.GetToken(TMLParserLPAREN, i)
}

func (s *MacroAppContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(TMLParserCOMMA)
}

func (s *MacroAppContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(TMLParserCOMMA, i)
}

func (s *MacroAppContext) TapeSymbol() ITapeSymbolContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITapeSymbolContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITapeSymbolContext)
}

func (s *MacroAppContext) AllRPAREN() []antlr.TerminalNode {
	return s.GetTokens(TMLParserRPAREN)
}

func (s *MacroAppContext) RPAREN(i int) antlr.TerminalNode {
	return s.GetToken(TMLParserRPAREN, i)
}

func (s *MacroAppContext) ID() antlr.TerminalNode {
	return s.GetToken(TMLParserID, 0)
}

func (s *MacroAppContext) AllStateLabel() []IStateLabelContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IStateLabelContext)(nil)).Elem())
	var tst = make([]IStateLabelContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IStateLabelContext)
		}
	}

	return tst
}

func (s *MacroAppContext) StateLabel(i int) IStateLabelContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStateLabelContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IStateLabelContext)
}

func (s *MacroAppContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MacroAppContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MacroAppContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TMLListener); ok {
		listenerT.EnterMacroApp(s)
	}
}

func (s *MacroAppContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TMLListener); ok {
		listenerT.ExitMacroApp(s)
	}
}

func (p *TMLParser) MacroApp() (localctx IMacroAppContext) {
	localctx = NewMacroAppContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, TMLParserRULE_macroApp)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(31)
		p.Match(TMLParserLPAREN)
	}
	{
		p.SetState(32)

		var _x = p.StateLabel()

		localctx.(*MacroAppContext).enteringState = _x
	}
	{
		p.SetState(33)
		p.Match(TMLParserCOMMA)
	}
	{
		p.SetState(34)
		p.TapeSymbol()
	}
	{
		p.SetState(35)
		p.Match(TMLParserRPAREN)
	}
	{
		p.SetState(36)
		p.Match(TMLParserID)
	}
	{
		p.SetState(37)
		p.Match(TMLParserLPAREN)
	}
	{
		p.SetState(38)

		var _x = p.StateLabel()

		localctx.(*MacroAppContext).acceptState = _x
	}
	{
		p.SetState(39)
		p.Match(TMLParserCOMMA)
	}
	{
		p.SetState(40)

		var _x = p.StateLabel()

		localctx.(*MacroAppContext).rejectState = _x
	}
	{
		p.SetState(41)
		p.Match(TMLParserRPAREN)
	}

	return localctx
}

// IMacroDefContext is an interface to support dynamic dispatch.
type IMacroDefContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMacroDefContext differentiates from other interfaces.
	IsMacroDefContext()
}

type MacroDefContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMacroDefContext() *MacroDefContext {
	var p = new(MacroDefContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TMLParserRULE_macroDef
	return p
}

func (*MacroDefContext) IsMacroDefContext() {}

func NewMacroDefContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MacroDefContext {
	var p = new(MacroDefContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TMLParserRULE_macroDef

	return p
}

func (s *MacroDefContext) GetParser() antlr.Parser { return s.parser }

func (s *MacroDefContext) DEFINE() antlr.TerminalNode {
	return s.GetToken(TMLParserDEFINE, 0)
}

func (s *MacroDefContext) MACRO() antlr.TerminalNode {
	return s.GetToken(TMLParserMACRO, 0)
}

func (s *MacroDefContext) ID() antlr.TerminalNode {
	return s.GetToken(TMLParserID, 0)
}

func (s *MacroDefContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(TMLParserLBRACE, 0)
}

func (s *MacroDefContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(TMLParserRBRACE, 0)
}

func (s *MacroDefContext) AllStatement() []IStatementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IStatementContext)(nil)).Elem())
	var tst = make([]IStatementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IStatementContext)
		}
	}

	return tst
}

func (s *MacroDefContext) Statement(i int) IStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *MacroDefContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MacroDefContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MacroDefContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TMLListener); ok {
		listenerT.EnterMacroDef(s)
	}
}

func (s *MacroDefContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TMLListener); ok {
		listenerT.ExitMacroDef(s)
	}
}

func (p *TMLParser) MacroDef() (localctx IMacroDefContext) {
	localctx = NewMacroDefContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, TMLParserRULE_macroDef)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(43)
		p.Match(TMLParserDEFINE)
	}
	{
		p.SetState(44)
		p.Match(TMLParserMACRO)
	}
	{
		p.SetState(45)
		p.Match(TMLParserID)
	}
	{
		p.SetState(46)
		p.Match(TMLParserLBRACE)
	}
	p.SetState(50)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == TMLParserDEFINE || _la == TMLParserLPAREN {
		{
			p.SetState(47)
			p.Statement()
		}

		p.SetState(52)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(53)
		p.Match(TMLParserRBRACE)
	}

	return localctx
}

// ICommandContext is an interface to support dynamic dispatch.
type ICommandContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetCurrentState returns the currentState rule contexts.
	GetCurrentState() IStateLabelContext

	// GetNewState returns the newState rule contexts.
	GetNewState() IStateLabelContext

	// GetCurrentSymbol returns the currentSymbol rule contexts.
	GetCurrentSymbol() ITapeSymbolContext

	// GetNewSymbol returns the newSymbol rule contexts.
	GetNewSymbol() ITapeSymbolContext

	// GetDir returns the dir rule contexts.
	GetDir() IDirectionContext

	// SetCurrentState sets the currentState rule contexts.
	SetCurrentState(IStateLabelContext)

	// SetNewState sets the newState rule contexts.
	SetNewState(IStateLabelContext)

	// SetCurrentSymbol sets the currentSymbol rule contexts.
	SetCurrentSymbol(ITapeSymbolContext)

	// SetNewSymbol sets the newSymbol rule contexts.
	SetNewSymbol(ITapeSymbolContext)

	// SetDir sets the dir rule contexts.
	SetDir(IDirectionContext)

	// IsCommandContext differentiates from other interfaces.
	IsCommandContext()
}

type CommandContext struct {
	*antlr.BaseParserRuleContext
	parser        antlr.Parser
	currentState  IStateLabelContext
	newState      IStateLabelContext
	currentSymbol ITapeSymbolContext
	newSymbol     ITapeSymbolContext
	dir           IDirectionContext
}

func NewEmptyCommandContext() *CommandContext {
	var p = new(CommandContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TMLParserRULE_command
	return p
}

func (*CommandContext) IsCommandContext() {}

func NewCommandContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CommandContext {
	var p = new(CommandContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TMLParserRULE_command

	return p
}

func (s *CommandContext) GetParser() antlr.Parser { return s.parser }

func (s *CommandContext) GetCurrentState() IStateLabelContext { return s.currentState }

func (s *CommandContext) GetNewState() IStateLabelContext { return s.newState }

func (s *CommandContext) GetCurrentSymbol() ITapeSymbolContext { return s.currentSymbol }

func (s *CommandContext) GetNewSymbol() ITapeSymbolContext { return s.newSymbol }

func (s *CommandContext) GetDir() IDirectionContext { return s.dir }

func (s *CommandContext) SetCurrentState(v IStateLabelContext) { s.currentState = v }

func (s *CommandContext) SetNewState(v IStateLabelContext) { s.newState = v }

func (s *CommandContext) SetCurrentSymbol(v ITapeSymbolContext) { s.currentSymbol = v }

func (s *CommandContext) SetNewSymbol(v ITapeSymbolContext) { s.newSymbol = v }

func (s *CommandContext) SetDir(v IDirectionContext) { s.dir = v }

func (s *CommandContext) LPAREN() antlr.TerminalNode {
	return s.GetToken(TMLParserLPAREN, 0)
}

func (s *CommandContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(TMLParserCOMMA)
}

func (s *CommandContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(TMLParserCOMMA, i)
}

func (s *CommandContext) RPAREN() antlr.TerminalNode {
	return s.GetToken(TMLParserRPAREN, 0)
}

func (s *CommandContext) AllStateLabel() []IStateLabelContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IStateLabelContext)(nil)).Elem())
	var tst = make([]IStateLabelContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IStateLabelContext)
		}
	}

	return tst
}

func (s *CommandContext) StateLabel(i int) IStateLabelContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStateLabelContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IStateLabelContext)
}

func (s *CommandContext) AllTapeSymbol() []ITapeSymbolContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ITapeSymbolContext)(nil)).Elem())
	var tst = make([]ITapeSymbolContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ITapeSymbolContext)
		}
	}

	return tst
}

func (s *CommandContext) TapeSymbol(i int) ITapeSymbolContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITapeSymbolContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ITapeSymbolContext)
}

func (s *CommandContext) Direction() IDirectionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDirectionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDirectionContext)
}

func (s *CommandContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CommandContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CommandContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TMLListener); ok {
		listenerT.EnterCommand(s)
	}
}

func (s *CommandContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TMLListener); ok {
		listenerT.ExitCommand(s)
	}
}

func (p *TMLParser) Command() (localctx ICommandContext) {
	localctx = NewCommandContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, TMLParserRULE_command)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(55)
		p.Match(TMLParserLPAREN)
	}
	{
		p.SetState(56)

		var _x = p.StateLabel()

		localctx.(*CommandContext).currentState = _x
	}
	{
		p.SetState(57)
		p.Match(TMLParserCOMMA)
	}
	{
		p.SetState(58)

		var _x = p.StateLabel()

		localctx.(*CommandContext).newState = _x
	}
	{
		p.SetState(59)
		p.Match(TMLParserCOMMA)
	}
	{
		p.SetState(60)

		var _x = p.TapeSymbol()

		localctx.(*CommandContext).currentSymbol = _x
	}
	{
		p.SetState(61)
		p.Match(TMLParserCOMMA)
	}
	{
		p.SetState(62)

		var _x = p.TapeSymbol()

		localctx.(*CommandContext).newSymbol = _x
	}
	{
		p.SetState(63)
		p.Match(TMLParserCOMMA)
	}
	{
		p.SetState(64)

		var _x = p.Direction()

		localctx.(*CommandContext).dir = _x
	}
	{
		p.SetState(65)
		p.Match(TMLParserRPAREN)
	}

	return localctx
}

// IStateLabelContext is an interface to support dynamic dispatch.
type IStateLabelContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStateLabelContext differentiates from other interfaces.
	IsStateLabelContext()
}

type StateLabelContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStateLabelContext() *StateLabelContext {
	var p = new(StateLabelContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TMLParserRULE_stateLabel
	return p
}

func (*StateLabelContext) IsStateLabelContext() {}

func NewStateLabelContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StateLabelContext {
	var p = new(StateLabelContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TMLParserRULE_stateLabel

	return p
}

func (s *StateLabelContext) GetParser() antlr.Parser { return s.parser }

func (s *StateLabelContext) ID() antlr.TerminalNode {
	return s.GetToken(TMLParserID, 0)
}

func (s *StateLabelContext) STARTSTATE() antlr.TerminalNode {
	return s.GetToken(TMLParserSTARTSTATE, 0)
}

func (s *StateLabelContext) REJECTSTATE() antlr.TerminalNode {
	return s.GetToken(TMLParserREJECTSTATE, 0)
}

func (s *StateLabelContext) ACCEPTSTATE() antlr.TerminalNode {
	return s.GetToken(TMLParserACCEPTSTATE, 0)
}

func (s *StateLabelContext) GetRuleContext() antlr.RuleContext {
	return s
}
